--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,8 @@
       }
     ],
     "operator-linebreak": ["error", "after"],
-    "camelcase": "off"
+    "camelcase": "off",
+    "multiline-ternary": ["off", "always-multiline"]
   },
   "overrides": [
     {
