--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.0.0",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
