--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "formik": "^2.2.9",
     "history": "5",
     "jssha": "^3.2.0",
-    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
@@ -23,6 +22,7 @@
     "react-paginate": "^8.0.0",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.4",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
