setup eslint and prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,69 +1,23 @@
 {
   "env": {
     "browser": true,
-    "commonjs": true,
-    "node": true,
-    "es6": true
+    "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "standard"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended",
+    "eslint-config-prettier"
+  ],
   "parserOptions": {
-    "ecmaVersion": 7,
     "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
       "jsx": true
     },
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "globals": {},
-  "plugins": ["react", "react-hooks"],
+  "plugins": ["react"],
   "rules": {
-    "function-call-argument-newline": ["error", "consistent"],
-    "linebreak-style": ["error", "unix"],
-    "indent": [
-      "error",
-      2,
-      {
-        "MemberExpression": 1,
-        "SwitchCase": 1
-      }
-    ],
-    "jsx-quotes": ["error", "prefer-single"],
-    "no-console": "warn",
-    "no-empty-function": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "react-hooks/rules-of-hooks": "error",
-    "react/jsx-tag-spacing": [
-      "error",
-      {
-        "closingSlash": "never",
-        "beforeSelfClosing": "always",
-        "afterOpening": "never",
-        "beforeClosing": "never"
-      }
-    ],
-    "standard/no-callback-literal": "off",
-    "comma-dangle": ["error", "always-multiline"],
-    "space-before-function-paren": [
-      "error",
-      {
-        "anonymous": "always",
-        "named": "never",
-        "asyncArrow": "always"
-      }
-    ],
-    "operator-linebreak": ["error", "after"],
-    "camelcase": "off",
-    "multiline-ternary": ["off", "always-multiline"]
-  },
-  "overrides": [
-    {
-      "files": [
-        "**/__mocks__/**/*.js"
-      ],
-      "rules": {
-        "no-undef": "off",
-        "no-console": "off"
-      }
-    }
-  ]
+    "prettier/prettier": "warn"
+  }
 }
